; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum.c_mlxsw_sp_port_mask_width_get.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlxsw/extr_spectrum.c_mlxsw_sp_port_mask_width_get.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MLXSW_SP_PORT_MASK_WIDTH_1X = common dso_local global i32 0, align 4
@MLXSW_SP_PORT_MASK_WIDTH_2X = common dso_local global i32 0, align 4
@MLXSW_SP_PORT_MASK_WIDTH_4X = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @mlxsw_sp_port_mask_width_get to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mlxsw_sp_port_mask_width_get(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %11 [
    i32 1, label %5
    i32 2, label %7
    i32 4, label %9
  ]

5:                                                ; preds = %1
  %6 = load i32, i32* @MLXSW_SP_PORT_MASK_WIDTH_1X, align 4
  store i32 %6, i32* %2, align 4
  br label %13

7:                                                ; preds = %1
  %8 = load i32, i32* @MLXSW_SP_PORT_MASK_WIDTH_2X, align 4
  store i32 %8, i32* %2, align 4
  br label %13

9:                                                ; preds = %1
  %10 = load i32, i32* @MLXSW_SP_PORT_MASK_WIDTH_4X, align 4
  store i32 %10, i32* %2, align 4
  br label %13

11:                                               ; preds = %1
  %12 = call i32 @WARN_ON_ONCE(i32 1)
  store i32 0, i32* %2, align 4
  br label %13

13:                                               ; preds = %11, %9, %7, %5
  %14 = load i32, i32* %2, align 4
  ret i32 %14
}

declare dso_local i32 @WARN_ON_ONCE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
